--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,27 @@
     <link rel="stylesheet" href="./style.css">
     <title>Discord</title>
 </head>
+
 <body>
-    
 
+    <header>
+        <div class="header_container">
+            <div class="header_item debug">logo</div>
 
+            <nav class="debug">
+                <a href="#1">link</a>
+                <a href="#2">link</a>
+                <a href="#3">link</a>
+                <a href="#4">link</a>
+            </nav>
+
+            <div class="header_item debug">login</div>
+        </div>
+    </header>
+
+    <main>
+        
+    </main>
 </body>
+
 </html>
