--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./utils.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/utils.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Discord</title>
 </head>
 
-<body>
+<body class="debug">
 
-    <header>
-        <div class="header_container">
+    <header class="flex align-center justify-center">
+        <div class="container flex align-center justify-between">
             <div class="header_item debug">logo</div>
 
-            <nav class="debug">
-                <a href="#1">link</a>
-                <a href="#2">link</a>
-                <a href="#3">link</a>
-                <a href="#4">link</a>
+            <nav class="header_item debug">
+                <ul>
+                    <li><a href="#1">link</a></li>
+                    <li><a href="#2">link</a></li>
+                    <li><a href="#3">link</a></li>
+                    <li><a href="#4">link</a></li>
+                </ul>
             </nav>
 
             <div class="header_item debug">login</div>
@@ -27,7 +29,10 @@
     </header>
 
     <main>
-        
+        <section class="section_one debug">
+            <div class="debug">
+            </div>
+        </section>
     </main>
 </body>
 
