add: middle sections

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <title>Discord</title>
 </head>
 
-<body class="debug">
+<body class>
 
     <header class="flex align-center justify-center">
         <div class="container flex align-center justify-between">
+
+            <!-- LOGO -->
             <div class="header_item debug">logo</div>
 
+            <!-- MENU -->
             <nav class="header_item debug">
                 <ul>
                     <li><a href="#1">link</a></li>
@@ -24,15 +27,42 @@
                 </ul>
             </nav>
 
+            <!-- USER ACCESS -->
             <div class="header_item debug">login</div>
         </div>
     </header>
 
     <main>
-        <section class="section_one debug">
-            <div class="debug">
+        <!-- JUMBOTRON -->
+        <section class="jumbotron flex align-center justify-center">
+            <div class="container debug"></div>
+        </section>
+
+        <!-- SECTION 1 -->
+        <section class="bg_white">
+            <div class="container flex center_div">
+                <div class="col_1 debug"></div>
+                <div class="col_2 debug"></div>
             </div>
         </section>
+
+        <!-- SECTION 2 -->
+        <section class="bg_grey">
+            <div class="container flex center_div">
+                <div class="col_2 debug"></div>
+                <div class="col_1 debug"></div>
+            </div>
+        </section>
+
+        <!-- SECTION 3 -->
+        <section class="bg_white">
+            <div class="container flex center_div">
+                <div class="col_1 debug"></div>
+                <div class="col_2 debug"></div>
+            </div>
+        </section>
+
+        <section class="debug"></section>
     </main>
 </body>
 
