--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@
             </div>
         </section>
 
-        <section class="debug"></section>
+        <!-- SECTION 4 -->
+        <section class="section_tall bg_grey">
+            <div class="container_tall center_div debug"></div>
+        </section>
+
+        <!-- SECTION 5 -->
+        <section class="bg_darkgrey">
+            <div class="container flex center_div">
+                <div class="col_big debug"></div>
+                <div class="col debug"></div>
+                <div class="col debug"></div>
+                <div class="col debug"></div>
+                <div class="col debug"></div>
+            </div>
+        </section>
     </main>
 </body>
 
