--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
             </div>
         </section>
     </main>
+
+    <footer class="bg_darkgrey">
+        <div class="container flex justify-between center_div">
+            <button class="debug">Logo</button>
+            <button class="debug">Bottone</button>
+        </div>
+    </footer>
 </body>
 
 </html>
